# Developers-Space

./: .pylintrc  README.md  app.py  posts.db  pyproject.toml  requirements.txt  tasks.db  users.db
backend/: BackendTests.py  __init__.py  main.py  posts.db  tasks.db
backend/db/: __init__.py
backend/db/models/: post.py
backend/exceptions/: __init__.py  post.py
backend/routes/: post.py
backend/schemas/: __init__.py  post.py
frontend/: __init__.py
frontend/db/: __init__.py
frontend/db/models/: user.py
frontend/forms/: login.py  register.py
frontend/routes/: __init__.py  create.py  default.py  delete.py  info.py  login.py  request.py
frontend/templates/: __base.html  create.html  delete.html  error.html  form_template.html  index.html  info.html  login.html  register.html
