[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Leonidig <leonid200955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
httpx = "^0.27.2"
quart-wtf = "^0.0.1"
aiohttp = "^3.10.10"
quart-auth = "0.10.0" 
quart = "^0.18.4"
werkzeug = "^2.2.3"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
