[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Leonidig <leonid200955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
httpx = "^0.27.2"
aiohttp = "^3.10.10"
aiosqlite = "^0.20.0"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
